<resources>
    <string name="app_name">Smart Baseball Bat</string>

    <!-- APP -->
    <string name="title_activity_main">Home</string>
    <string name="title_activity_chart">Chart</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_list">List of swings</string>
    <string name="title_activity_watch">Watch</string>
    <string name="title_activity_settings">Settings</string>
    <string name="watch">Watch</string>
    <string name="chart">Chart</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>

    <!-- MAIN ACTIVITY  -->
    <string name="text_view_title_best">Best Swing info</string>
    <string name="text_view_swing_counter">Total Swings</string>
    <string name="text_view_swing_counter_default_value">0</string>
    <string name="text_view_title_average">Average Swing info</string>
    <string name="text_view_swing_strength">Swing Strength</string>
    <string name="text_view_swing_angle">Swing Angle</string>
    <string name="text_view_swing_duration">Swing Duration</string>

    <string name="text_view_swing_strength_default_value">0.00</string>
    <string name="text_view_swing_angle_default_value">45.00</string>
    <string name="text_view_swing_duration_default_value">1000</string>

    <!-- LIST ACTIVITY -->
    <string name="text_view_list_text">Choose the data of the swings</string>
    <string name="text_view_list_text_above_swings">List of the swings of</string>
    <string name="text_view_header_swing_strength">STRENGTH  N</string>
    <string name="text_view_header_swing_angle">ANGLE  °</string>
    <string name="text_view_header_swing_duration">DURATION  ms</string>
    <string name="clear_list_button">Clear</string>
    <string name="choose_data_list_button">Choose a data</string>
    <string name="text_view_calendar">Select the period</string>

    <string name="alert_dialog_list_single_item">Are you sure you want delete the swing #</string>
    <string name="alert_dialog_list_period">Are you sure you want to delete all the swings performed in this</string>
    <string name="swing_deleted_successfully">Swing deleted successfully!</string>

    <!-- CALENDAR ACTIVITY -->
    <string name="no_date_selected">No date selected</string>

    <!-- CHART  ACTIVITY -->
    <string name="button_strength">Strength</string>
    <string name="button_angle">Angle</string>
    <string name="button_duration">Duration</string>
    <string name="spinner_period">Period of measurements</string>
    <string name="chart_description"># Swing</string>
    <string name="chart_no_data_text">No swings have been made yet.</string>
    <string name="no_swings">No swings are presents yet</string>

    <!-- WATCH  ACTIVITY -->
    <string name="text_view_watch_title">Real Time Measurements</string>
    <string name="text_view_watch_strength_default_value">0.00</string>
    <string name="text_view_watch_angle_default_value">0.00</string>
    <string name="text_view_watch_duration_default_value">0</string>

    <string name="notification_title">Change of a measurement</string>
    <string name="notification_text">WOW! You have performed a new best </string>

    <!-- Settings ACTIVITY -->
    <string name="title_intent_preference">User Settings</string>
    <string name="summary_intent_preference">User settings</string>

    <string name="text_view_hitter_name">Hitter Name:</string>
    <string name="text_view_hitter_name_summary">The name of the hitter who performs the swings</string>
    <string name="text_view_hitter_name_default_value"></string>

    <string name="bat_measure">Shows Best Swing Speed</string>
    <string name="bat_measure_summary_ON_switch">Show the Best swing speed</string>
    <string name="bat_measure_summary_OFF_switch">Show the average speed of the swings</string>
    <string name="bat_measure_switch_text_ON">BEST</string>
    <string name="bat_measure_switch_text_OFF">AVERAGE</string>
    <string name="bat_measure_default_value">true</string>
    <string name="bat_weight_name">Favourite bat</string>
    <string name="bat_weight_default_value">0</string>
    <string name="bat_measure_key">bat_measure_key</string>
    <string name="hitter_name_key">hitter_name_key</string>
    <string name="bat_weight_key">bat_weight_key</string>
    <string name="clear_key">clear_key</string>
    <string name="clear_name">Delete ALL the swings performed.</string>
    <string name="clear_default_value">false</string>

    <string name="button_confirm">Confirm</string>
    <string name="favourite_bat_change_msg">I have changed your favourite bat with one weights:</string>

    <string name="alert_dialog_settings_title">Deletion Confirmation</string>
    <string name="alert_dialog_settings_text">Are you sure you want to delete all the swings performed from the beginning?</string>
    <string name="all_swing_deleted_text">All the swings have been deleted successfully</string>

    <!-- DB MANAGER SERVICE -->
    <string name="insert_problem">Problem during swing insertion</string>
    <string name="deletion_problem">Problem during swing deletion</string>
    <string name="deletion_msg">swings deleted successfully!</string>



</resources>
